# minecraft-rust-jni-cheat

./: Cargo.toml  README.md  build.rs
src/: console.c  console.cpp  lib.rs
